# mcp-yashan

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  README.md  README_ADVANCED.md  README_EN.md  YASHAN_SQL_GUIDE.md  config.py  docker-compose.yml  mcp_server.py  pyproject.toml  qc  requirements.txt  server.json  server.py  start.sh  test_import.py  test_jdbc.py  test_mcp_endpoint.py  yashan_mcp_server.py
config/: .env.example  config.py
core/: __init__.py  executor.py  tools.py
docs/: HTTP_MODE.md  QUICK_START.md  STDIO_MODE.md  WINDOWS_AUTOSTART.md  sse-update-path.md
java-src/io/yashan/mcp/: SqlExecutorMain.java
mcp_yashan/: __init__.py  __main__.py  config_wizard.py  http_server.py  mcp_server.py
mcp_yashan/core/: __init__.py  executor.py  metadata.py
scripts/: build_bundled_java.sh  create_autostart_task.ps1  package_release.sh  start.sh
src/: http_server.py  mcp_server.py
src/core/: executor.py
test/: test_jdbc.py  test_stability.py
tests/: test_stability.py
