[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-yashan"
version = "2.1.1"
description = "MCP Server for YashanDB - Connect AI assistants to YashanDB databases"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Willorn", email = "codenice@outlook.com"}
]
keywords = ["mcp", "yashan", "yashandb", "database", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    "starlette>=0.37.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
mcp-yashan = "mcp_yashan.mcp_server:main"
mcp-yashan-http = "mcp_yashan.http_server:main"

[project.urls]
Homepage = "https://github.com/willorn/mcp-yashan"
Repository = "https://github.com/willorn/mcp-yashan"
Documentation = "https://github.com/willorn/mcp-yashan/tree/main/docs"
"Bug Tracker" = "https://github.com/willorn/mcp-yashan/issues"

[tool.setuptools]
packages = ["mcp_yashan", "mcp_yashan.core"]

[tool.setuptools.package-data]
mcp_yashan = [
    "runtime/*.jar",
    "runtime/java/*.jar",
]
